Fix image with on mobile

--- a/assets/_placeholders.sass
+++ b/assets/_placeholders.sass
@@ -6,7 +6,7 @@
   padding: 0 1rem
 
 %text
-  width: 46rem
+  width: $line-width
   max-width: 100%
 
 %padded
