--- a/assets/_settings.scss
+++ b/assets/_settings.scss
@@ -1,5 +1,6 @@
 $line-height: 1.375;
-$line-hight_title: 1.15;
+$line-height_title: 1.15;
+$line-width: 46rem;
 $leading: $line-height * 1rem;
 
 // Jobs, flashes, footer
